# vapabi

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: error.rs  main.rs
contract/: Cargo.toml
contract/src/: lib.rs
derive/: Cargo.toml
derive/src/: constructor.rs  contract.rs  event.rs  function.rs  lib.rs
snap/: snapcraft.yaml
tests/: Cargo.toml
tests/src/: lib.rs
tools/: publish.sh
vapabi/: Cargo.toml
vapabi/src/: lib.rs  log.rs
vapabi/src/token/: token.rs
