[package]
name = "vapabi-cli"
version = "9.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
keywords = ["vapory", "vap", "abi", "solidity", "cli"]
description = "Easy to use cli for conversion of vapory contract calls to bytecode."
homepage = "https://github.com/rust-vapory/vapabi"
license = "MIT/Apache-2.0"

[dependencies]
rustc-hex = "2.0"
serde = "1.0"
serde_derive = "1.0"
docopt = "1.0"
vapabi = { version = "9.0.1", path = "../vapabi" }
error-chain = { version = "0.12.1", default-features = false }
tiny-keccak = "1.0"

[features]
backtrace = ["error-chain/backtrace"]

[[bin]]
name = "vapabi"
path = "src/main.rs"
