[package]
name = "vapabi-contract"
version = "9.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/rust-vapory/vapabi"
license = "MIT/Apache-2.0"
keywords = ["vapory", "vap", "abi", "solidity", "derive"]
description = "Easy to use conversion of vapory contract calls to bytecode."
