[package]
name = "vapabi-derive"
version = "9.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/rust-vapory/vapabi"
license = "MIT/Apache-2.0"
keywords = ["vapory", "vap", "abi", "solidity", "derive"]
description = "Easy to use conversion of vapory contract calls to bytecode."

[lib]
proc-macro = true

[dependencies]
vapabi = { path = "../vapabi", version = "9.0.1" }
heck = "0.3"
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"
